# PLI

./: .gitignore  CMakeLists.txt  README.md  REFERENCES.md  function_enums.conf  function_enums.json  functions.json  get_funcs.py  makefile  makefile_old  run_tests.py  syntax.ebnf  test_parser_simple.pli
examples/: base.pli  base_bench.py  bench.pli  big_nesting.pli  complex.pli  fact.pli  gradebook_stats.pli  if_while.pli  input.pli  loan_decision_flow.pli  logic.pli  range_number_analysis.pli  smart_home_cycle.pli
include/: errs.h  executor.h  lexer.h  main_head.h  mem.h  ops.h  parser.h  parser_api.h  var.h
src/: ast_free.c  err.c  eval_expr.c  executor.c  executor_api.c  lexer.c  lexer_debug.c  main.c  mem.c  parse_expr.c  parse_print.c  parser.c  parser_api.c  parser_debug.c  var.c
test_lexer_ids_kws_bools/: input1.pli  input2.pli  input3.pli  input4.pli  input5.pli  input6.pli
test_lexer_main/: input1.pli  input10.pli  input11.pli  input12.pli  input13.pli  input14.pli  input15.pli  input16.pli  input17.pli  input18.pli  input19.pli  input2.pli  input20.pli  input21.pli  input22.pli  input23.pli  input24.pli  input25.pli  input26.pli  input27.pli  input28.pli  input29.pli  input3.pli  input30.pli  input31.pli  input32.pli  input33.pli  input34.pli  input35.pli  input36.pli  input37.pli  input38.pli  input39.pli  input4.pli  input40.pli  input5.pli  input6.pli  input7.pli  input8.pli  input9.pli  (+1 more)
test_lexer_numbers/: input.pli  input1.pli  input10.pli  input11.pli  input12.pli  input2.pli  input3.pli  input4.pli  input5.pli  input6.pli  input7.pli  input8.pli  input9.pli
test_lexer_seps_ops/: input1.pli
test_parser/: test01_simple_literals.pli  test02_arithmetic.pli  test03_precedence.pli  test04_grouping.pli  test05_unary.pli  test06_comparison.pli  test07_logical.pli  test08_variables_in_expr.pli  test09_complex.pli  test10_mixed.pli
